# moss

./: .env.example  .envrc  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  GEMINI.md  LLMS.md  README.md  TODO.md  flake.nix  install.ps1  mkdocs.yml  package.json  pnpm-lock.yaml  pyproject.toml
.cargo/: config.toml
.moss/: clone-allow  config.toml  large-files-allow
crates/moss/: Cargo.toml
crates/moss-cli/: Cargo.toml  bench.sh
crates/moss-cli/src/: analyze.rs  anchors.rs  cfg.rs  complexity.rs  daemon.rs  deps.rs  edit.rs  external_packages.rs  grep.rs  health.rs  index.rs  main.rs  output.rs  parsers.rs  path_resolve.rs  paths.rs  scopes.rs  skeleton.rs  symbols.rs  tree.rs
crates/moss-cli/src/commands/: analyze.rs  anchors.rs  callees.rs  cfg.rs  complexity.rs  context.rs  daemon.rs  deps_cmd.rs  edit.rs  grammars.rs  grep.rs  grep_cmd.rs  health.rs  imports.rs  index.rs  index_packages.rs  index_stats.rs  lint.rs  list_files.rs  mod.rs  overview.rs  package.rs  reindex.rs  scopes.rs  search_tree.rs  sessions.rs  skeleton.rs  summarize_cmd.rs  symbols_cmd.rs  update.rs  view.rs  view_cmd.rs
crates/moss-cli/src/serve/: http.rs  lsp.rs  mcp.rs  mod.rs
crates/moss-cli/src/sessions/: analysis.rs  mod.rs
crates/moss-cli/src/sessions/formats/: claude_code.rs  gemini_cli.rs  mod.rs  moss.rs
crates/moss-cli/src/workflow/: config.rs  execute.rs  llm.rs  mod.rs
crates/moss-grammars/: Cargo.toml
crates/moss-grammars/src/: lib.rs
crates/moss-languages/: Cargo.toml
crates/moss-languages/src/: ada.rs  agda.rs  asciidoc.rs  asm.rs  awk.rs  bash.rs  batch.rs  c.rs  caddy.rs  capnp.rs  clojure.rs  cmake.rs  commonlisp.rs  cpp.rs  csharp.rs  css.rs  d.rs  dart.rs  devicetree.rs  diff.rs  dockerfile.rs  dot.rs  ecmascript.rs  elisp.rs  elixir.rs  elm.rs  erlang.rs  external_packages.rs  ffi.rs  fish.rs  fsharp.rs  gleam.rs  glsl.rs  go.rs  grammar_loader.rs  graphql.rs  groovy.rs  haskell.rs  hcl.rs  hlsl.rs  (+64 more)
crates/moss-packages/: Cargo.toml
crates/moss-packages/src/: cache.rs  http.rs  lib.rs
crates/moss-packages/src/ecosystems/: cargo.rs  composer.rs  conan.rs  deno.rs  gem.rs  go.rs  hex.rs  maven.rs  mod.rs  nix.rs  npm.rs  nuget.rs  python.rs
crates/moss-packages/src/ecosystems/npm/: lockfile_bun.rs  lockfile_npm.rs  lockfile_pnpm.rs  lockfile_yarn.rs  mod.rs
crates/moss-packages/src/index/: apk.rs  apt.rs  arch_common.rs  artix.rs  bioconductor.rs  brew.rs  cachyos.rs  cargo.rs  chaotic_aur.rs  choco.rs  clojars.rs  composer.rs  conan.rs  conda.rs  copr.rs  cran.rs  ctan.rs  deno.rs  dnf.rs  docker.rs  dub.rs  endeavouros.rs  fdroid.rs  flatpak.rs  freebsd.rs  gem.rs  gentoo.rs  go.rs  guix.rs  hackage.rs  hex.rs  homebrew_casks.rs  hunter.rs  jsr.rs  julia.rs  luarocks.rs  macports.rs  manjaro.rs  maven.rs  metacpan.rs  (+24 more)
crates/moss-rules/: Cargo.toml
crates/moss-rules/src/: lib.rs  loader.rs  runner.rs
crates/moss-rules/src/builtin/: go_many_returns.scm  js_console_log.scm  mod.rs  python_breakpoint.scm  python_tuple_return.scm  ruby_binding_pry.scm  rust_numeric_type_annotation.scm  rust_tuple_return.scm  typescript_tuple_return.scm
crates/moss-tools/: Cargo.toml
crates/moss-tools/src/: custom.rs  diagnostic.rs  lib.rs  registry.rs  sarif.rs  tools.rs
crates/moss-tools/src/adapters/: biome.rs  clippy.rs  deno.rs  eslint.rs  gofmt.rs  mod.rs  mypy.rs  oxfmt.rs  oxlint.rs  prettier.rs  pyright.rs  ruff.rs  rustfmt.rs  tsc.rs  tsgo.rs
crates/moss-tools/src/test_runners/: mod.rs
crates/moss/src/: config.rs  daemon.rs  deps.rs  edit.rs  extract.rs  filter.rs  grep.rs  health.rs  highlight_tests.rs  index.rs  lib.rs  main.rs  output.rs  overview.rs  parsers.rs  path_resolve.rs  paths.rs  shadow.rs  skeleton.rs  symbols.rs  text_search.rs  tree.rs
crates/moss/src/analyze/: complexity.rs  function_length.rs  mod.rs
crates/moss/src/commands/: analyze.rs  daemon.rs  edit.rs  filter.rs  generate.rs  grep.rs  index.rs  init.rs  lint.rs  mod.rs  package.rs  rules.rs  script.rs  sessions.rs  text_search.rs  todo.rs  view.rs  workflow.rs
crates/moss/src/commands/analyze/: args.rs  ast.rs  call_graph.rs  check_examples.rs  check_refs.rs  complexity.rs  docs.rs  duplicates.rs  files.rs  hotspots.rs  length.rs  lint.rs  mod.rs  query.rs  report.rs  rule_sources.rs  rules.rs  rules_cmd.rs  stale_docs.rs  trace.rs
crates/moss/src/commands/analyze/builtin_rules/: go_fmt_print.scm  hardcoded_secret.scm  js_console_log.scm  js_unnecessary_const.scm  mod.rs  no_fixme_comment.scm  no_todo_comment.scm  python_breakpoint.scm  python_print_debug.scm  ruby_binding_pry.scm  rust_dbg_macro.scm  rust_expect_empty.scm  rust_println_debug.scm  rust_todo_macro.scm  rust_unnecessary_let.scm  rust_unnecessary_type_alias.scm  rust_unwrap_in_impl.scm  ts_unnecessary_const.scm
crates/moss/src/commands/scripts/: agent.lua  benchmark.lua  cli.lua  config.lua  test.lua  todo.lua  type.lua  validate.lua
crates/moss/src/commands/scripts/agent/: commands.lua  context.lua  parser.lua  risk.lua  roles.lua  session.lua
crates/moss/src/commands/scripts/test/: property.lua
crates/moss/src/commands/scripts/type/: generate.lua
crates/moss/src/commands/sessions/: mod.rs  serve.rs  stats.rs
crates/moss/src/commands/tools/: lint.rs  test.rs
crates/moss/src/commands/view/: file.rs  history.rs  lines.rs  mod.rs  search.rs  symbol.rs  tree.rs
crates/moss/src/serve/: http.rs  lsp.rs  mcp.rs  mod.rs
crates/moss/src/sessions/: mod.rs
crates/moss/src/workflow/: llm.rs  lua_runtime.rs  memory.rs  mod.rs
crates/moss/src/workflow/lua_runtime/: test_cli_module.rs  test_property_module.rs  test_test_module.rs  test_type_module.rs  test_validate_module.rs
docs/: agent-commands.md  agentic-loop.md  api-boundaries.md  architecture-decisions.md  async-tasks.md  documentation.md  dogfooding.md  driver-architecture.md  file-boundaries.md  hybrid-loops.md  index.md  introduction.md  langgraph-evaluation.md  language-support.md  llm-comparison.md  log-analysis.md  lua-api.md  nested-execution.md  philosophy.md  prior-art.md  repository-coverage.md  research-low-priority.md  spec.md  (+5 more)
(+349 files in other folders)
