[workspace]
resolver = "2"
members = ["crates/moss-core", "crates/moss-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/anthropics/moss"

[workspace.dependencies]
# Core
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# File system
walkdir = "2"
ignore = "0.4"  # gitignore-aware walking
notify = "7"    # filesystem watching
dirs = "5"      # home directory lookup

# Fuzzy matching
nucleo-matcher = "0.3"

# Parallelism
rayon = "1.10"

# Search (ripgrep crates)
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"

# Parsing - arborium bundles ~70 tree-sitter grammars
arborium = { version = "2.4", features = [
    "lang-python",
    "lang-rust",
    "lang-javascript",
    "lang-typescript",
    "lang-markdown",
    "lang-json",
    "lang-yaml",
    "lang-html",
    "lang-css",
    "lang-go",
    "lang-c",
    "lang-cpp",
    "lang-java",
    "lang-ruby",
    "lang-bash",
    "lang-toml",
    "lang-scala",
    "lang-vue",
] }

# Shared crate
moss-core = { path = "crates/moss-core" }
