[workspace]
resolver = "2"
default-members = ["crates/moss"]
members = [
    "crates/moss",
    "crates/moss-grammars",
    "crates/moss-jsonschema",
    "crates/moss-languages",
    "crates/moss-openapi",
    "crates/moss-packages",
    "crates/moss-tools",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/anthropics/moss"

[workspace.dependencies]
# Core
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }
axum = "0.8"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# File system
walkdir = "2"
ignore = "0.4"  # gitignore-aware walking
notify = "7"    # filesystem watching
dirs = "5"      # home directory lookup

# Fuzzy matching
nucleo-matcher = "0.3"

# Parallelism
rayon = "1.10"

# Search (ripgrep crates)
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"

# Dynamic loading
libloading = "0.8"

# Minimize debug build size (full debug info adds ~2GB)
[profile.dev]
debug = 0
split-debuginfo = "unpacked"  # Faster incremental builds on Linux

# Speed up proc-macro and build-script builds
[profile.dev.build-override]
opt-level = 3

# Optimize release builds for size
[profile.release]
lto = true
codegen-units = 1
strip = true

