[project]
name = "moss"
version = "0.1.0"
description = "Headless agent orchestration layer for AI engineering"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
moss = "moss.cli:main"

[project.entry-points."moss.plugins"]
python-skeleton = "moss.skeleton:PythonSkeletonPlugin"
python-dependency = "moss.dependencies:PythonDependencyPlugin"
python-cfg = "moss.cfg:PythonCFGPlugin"
tree-sitter-skeleton = "moss.plugins.tree_sitter:TreeSitterSkeletonPlugin"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=7.0.0",
    "ruff>=0.8.0",
    "mypy>=1.19.1",
]
docs = [
    "pdoc>=14.0",
]
tree-sitter = [
    "tree-sitter>=0.21",
    "tree-sitter-python>=0.21",
    "tree-sitter-typescript>=0.21",
    "tree-sitter-javascript>=0.21",
]
chroma = [
    "chromadb>=0.4",
]
server = [
    "fastapi>=0.124.4",
    "uvicorn[standard]>=0.38.0",
]
mcp = [
    "mcp>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/moss"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "RUF",    # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["moss"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

