[package]
name = "moss-cli"
version.workspace = true
edition = "2021"
license.workspace = true
description = "Fast CLI for moss code intelligence"

[[bin]]
name = "moss"
path = "src/main.rs"

[features]
default = ["all-languages"]

# Meta-features (passthrough to moss-languages)
all-languages = ["moss-languages/all-languages"]
tier1 = ["moss-languages/tier1"]

# Individual languages
lang-python = ["moss-languages/lang-python"]
lang-rust = ["moss-languages/lang-rust"]
lang-javascript = ["moss-languages/lang-javascript"]
lang-typescript = ["moss-languages/lang-typescript"]
lang-go = ["moss-languages/lang-go"]
lang-java = ["moss-languages/lang-java"]
lang-c = ["moss-languages/lang-c"]
lang-cpp = ["moss-languages/lang-cpp"]
lang-ruby = ["moss-languages/lang-ruby"]
lang-scala = ["moss-languages/lang-scala"]
lang-vue = ["moss-languages/lang-vue"]
lang-markdown = ["moss-languages/lang-markdown"]
lang-json = ["moss-languages/lang-json"]
lang-yaml = ["moss-languages/lang-yaml"]
lang-toml = ["moss-languages/lang-toml"]
lang-html = ["moss-languages/lang-html"]
lang-css = ["moss-languages/lang-css"]
lang-bash = ["moss-languages/lang-bash"]

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true
ignore.workspace = true
nucleo-matcher.workspace = true
rusqlite.workspace = true
moss-core.workspace = true
moss-languages = { path = "../moss-languages", default-features = false }
grep-matcher.workspace = true
grep-regex.workspace = true
grep-searcher.workspace = true
rayon.workspace = true
tokio.workspace = true
notify.workspace = true
ureq = { version = "2", features = ["json"] }
flate2 = "1"
tar = "0.4"
zip = "2"
regex = "1"
jaq-core = "2"
jaq-std = "2"
jaq-json = { version = "1", features = ["serde_json"] }

[dev-dependencies]
tempfile = "3"
