[package]
name = "moss-cli"
version.workspace = true
edition = "2021"
license.workspace = true
description = "Fast CLI for moss code intelligence"

[[bin]]
name = "moss"
path = "src/main.rs"

[features]
default = ["all-languages"]

# Meta-features (passthrough to moss-languages)
all-languages = ["moss-languages/all-languages"]
tier1 = ["moss-languages/tier1"]

# Optional LLM support for workflows
llm = ["rig-core"]

# Optional MCP server support
mcp = ["rmcp", "schemars"]

# Individual languages
lang-python = ["moss-languages/lang-python"]
lang-rust = ["moss-languages/lang-rust"]
lang-javascript = ["moss-languages/lang-javascript"]
lang-typescript = ["moss-languages/lang-typescript"]
lang-go = ["moss-languages/lang-go"]
lang-java = ["moss-languages/lang-java"]
lang-c = ["moss-languages/lang-c"]
lang-cpp = ["moss-languages/lang-cpp"]
lang-ruby = ["moss-languages/lang-ruby"]
lang-scala = ["moss-languages/lang-scala"]
lang-vue = ["moss-languages/lang-vue"]
lang-markdown = ["moss-languages/lang-markdown"]
lang-json = ["moss-languages/lang-json"]
lang-yaml = ["moss-languages/lang-yaml"]
lang-toml = ["moss-languages/lang-toml"]
lang-html = ["moss-languages/lang-html"]
lang-css = ["moss-languages/lang-css"]
lang-bash = ["moss-languages/lang-bash"]

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true
ignore.workspace = true
nucleo-matcher.workspace = true
rusqlite.workspace = true
arborium.workspace = true
dirs = "5"
moss-languages = { path = "../moss-languages", default-features = false }
moss-packages = { path = "../moss-packages" }
moss-tools = { path = "../moss-tools" }
grep-matcher.workspace = true
grep-regex.workspace = true
grep-searcher.workspace = true
rayon.workspace = true
tokio.workspace = true
axum.workspace = true
notify.workspace = true
ureq = { version = "2", features = ["json"] }
flate2 = "1"
tar = "0.4"
zip = "2"
regex = "1"
jaq-core = "2"
jaq-std = "2"
jaq-json = { version = "1", features = ["serde_json"] }
toml = "0.8"
rig-core = { version = "0.27", optional = true }
rmcp = { version = "0.12", features = ["server", "macros", "schemars", "transport-io"], optional = true }
schemars = { version = "1", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
