[package]
name = "rhizome-moss-grammars"
version = "0.1.0"
edition = "2024"
publish = false
description = "Arborium grammar dependencies for moss"

# This crate exists solely to download arborium grammars.
# Run `cargo fetch -p rhizome-moss-grammars` to populate ~/.cargo/registry.
# Then `cargo xtask build-grammars` can find and compile them.

[dependencies]
arborium-ada = "*"
arborium-agda = "*"
arborium-asciidoc = "*"
arborium-asm = "*"
arborium-awk = "*"
arborium-bash = "*"
arborium-batch = "*"
arborium-c = "*"
arborium-caddy = "*"
arborium-capnp = "*"
arborium-clojure = "*"
arborium-cmake = "*"
arborium-commonlisp = "*"
arborium-cpp = "*"
arborium-c-sharp = "*"
arborium-css = "*"
arborium-d = "*"
arborium-dart = "*"
arborium-devicetree = "*"
arborium-diff = "*"
arborium-dockerfile = "*"
arborium-dot = "*"
arborium-elisp = "*"
arborium-elixir = "*"
arborium-elm = "*"
arborium-erlang = "*"
arborium-fish = "*"
arborium-fsharp = "*"
arborium-gleam = "*"
arborium-glsl = "*"
arborium-go = "*"
arborium-graphql = "*"
arborium-groovy = "*"
arborium-haskell = "*"
arborium-hcl = "*"
arborium-hlsl = "*"
arborium-html = "*"
arborium-idris = "*"
arborium-ini = "*"
arborium-java = "*"
arborium-javascript = "*"
arborium-jinja2 = "*"
arborium-jq = "*"
arborium-json = "*"
arborium-julia = "*"
arborium-kdl = "*"
arborium-kotlin = "*"
arborium-lean = "*"
arborium-lua = "*"
arborium-markdown = "*"
arborium-matlab = "*"
arborium-meson = "*"
arborium-nginx = "*"
arborium-ninja = "*"
arborium-nix = "*"
arborium-objc = "*"
arborium-ocaml = "*"
arborium-perl = "*"
arborium-php = "*"
arborium-postscript = "*"
arborium-powershell = "*"
arborium-prolog = "*"
arborium-python = "*"
arborium-query = "*"
arborium-r = "*"
arborium-rescript = "*"
arborium-ron = "*"
arborium-ruby = "*"
arborium-rust = "*"
arborium-scala = "*"
arborium-scheme = "*"
arborium-scss = "*"
arborium-sparql = "*"
arborium-sql = "*"
arborium-ssh-config = "*"
arborium-starlark = "*"
arborium-svelte = "*"
arborium-swift = "*"
arborium-textproto = "*"
arborium-thrift = "*"
arborium-tlaplus = "*"
arborium-toml = "*"
arborium-tsx = "*"
arborium-typescript = "*"
arborium-typst = "*"
arborium-uiua = "*"
arborium-vb = "*"
arborium-verilog = "*"
arborium-vhdl = "*"
arborium-vim = "*"
arborium-vue = "*"
arborium-wit = "*"
arborium-x86asm = "*"
arborium-xml = "*"
arborium-yaml = "*"
arborium-yuri = "*"
arborium-zig = "*"
arborium-zsh = "*"
