[package]
name = "moss-languages"
version = "0.1.0"
edition = "2021"
description = "Language support traits and implementations for moss"

[dependencies]
arborium = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["common"]

# Tier 1: Core languages (~5MB) - universally useful, small grammars
tier1 = [
    "lang-python", "lang-rust", "lang-javascript", "lang-typescript",
    "lang-go", "lang-java", "lang-c",
    "lang-markdown", "lang-json", "lang-yaml", "lang-toml",
    "lang-html", "lang-css", "lang-bash",
]

# Tier 2: Common but larger (~25MB) - popular, worth including
tier2 = [
    "lang-cpp", "lang-ruby", "lang-kotlin", "lang-c-sharp",
    "lang-swift", "lang-php", "lang-scala", "lang-tsx", "lang-vue",
    "lang-lua", "lang-zig", "lang-elixir", "lang-dart",
    "lang-dockerfile", "lang-graphql", "lang-hcl", "lang-scss",
]

# Common = tier1 + tier2 (default, ~30MB)
common = ["tier1", "tier2"]

# Niche: Large or specialized grammars (opt-in only, ~60MB)
# lean (18M), verilog (18M), sql (9M), d (8M), hlsl (6M), fsharp (6M),
# objc (5M), tlaplus (5M), haskell (4M), swift already in tier2
niche = [
    "lang-sql", "lang-fsharp", "lang-haskell", "lang-ocaml",
    "lang-perl", "lang-r", "lang-julia", "lang-elm",
    "lang-erlang", "lang-svelte", "lang-xml", "lang-clojure",
    "lang-nix", "lang-cmake", "lang-vim", "lang-awk", "lang-fish",
    "lang-jq", "lang-powershell", "lang-zsh", "lang-groovy",
    "lang-glsl", "lang-hlsl", "lang-commonlisp", "lang-elisp",
    "lang-gleam", "lang-scheme", "lang-ini", "lang-diff", "lang-dot",
    "lang-kdl", "lang-ada", "lang-agda", "lang-d", "lang-matlab",
    "lang-meson", "lang-nginx", "lang-prolog", "lang-batch",
    "lang-asm", "lang-objc", "lang-typst", "lang-asciidoc",
    "lang-vb", "lang-idris", "lang-rescript", "lang-lean",
    "lang-caddy", "lang-capnp", "lang-devicetree", "lang-jinja2",
    "lang-ninja", "lang-postscript", "lang-query", "lang-ron",
    "lang-sparql", "lang-ssh-config", "lang-starlark", "lang-textproto",
    "lang-thrift", "lang-tlaplus", "lang-uiua",
    "lang-verilog", "lang-vhdl", "lang-wit", "lang-x86asm", "lang-yuri",
]

# All languages (tier1 + tier2 + niche, ~90MB)
all-languages = ["common", "niche"]

# Individual language features
lang-python = ["arborium/lang-python"]
lang-rust = ["arborium/lang-rust"]
lang-javascript = ["arborium/lang-javascript"]
lang-tsx = ["arborium/lang-tsx"]
lang-typescript = ["arborium/lang-typescript"]
lang-go = ["arborium/lang-go"]
lang-java = ["arborium/lang-java"]
lang-c = ["arborium/lang-c"]
lang-cpp = ["arborium/lang-cpp"]
lang-ruby = ["arborium/lang-ruby"]
lang-scala = ["arborium/lang-scala"]
lang-vue = ["arborium/lang-vue"]
lang-markdown = ["arborium/lang-markdown"]
lang-json = ["arborium/lang-json"]
lang-yaml = ["arborium/lang-yaml"]
lang-toml = ["arborium/lang-toml"]
lang-html = ["arborium/lang-html"]
lang-css = ["arborium/lang-css"]
lang-bash = ["arborium/lang-bash"]

lang-kotlin = ["arborium/lang-kotlin"]
lang-c-sharp = ["arborium/lang-c-sharp"]
lang-swift = ["arborium/lang-swift"]
lang-php = ["arborium/lang-php"]
lang-dockerfile = ["arborium/lang-dockerfile"]

lang-lua = ["arborium/lang-lua"]
lang-zig = ["arborium/lang-zig"]
lang-elixir = ["arborium/lang-elixir"]
lang-erlang = ["arborium/lang-erlang"]
lang-dart = ["arborium/lang-dart"]
lang-fsharp = ["arborium/lang-fsharp"]
lang-sql = ["arborium/lang-sql"]
lang-graphql = ["arborium/lang-graphql"]
lang-hcl = ["arborium/lang-hcl"]
lang-scss = ["arborium/lang-scss"]
lang-svelte = ["arborium/lang-svelte"]
lang-xml = ["arborium/lang-xml"]
lang-clojure = ["arborium/lang-clojure"]
lang-haskell = ["arborium/lang-haskell"]
lang-ocaml = ["arborium/lang-ocaml"]
lang-nix = ["arborium/lang-nix"]
lang-perl = ["arborium/lang-perl"]
lang-r = ["arborium/lang-r"]
lang-julia = ["arborium/lang-julia"]
lang-elm = ["arborium/lang-elm"]
lang-cmake = ["arborium/lang-cmake"]
lang-vim = ["arborium/lang-vim"]
lang-awk = ["arborium/lang-awk"]
lang-fish = ["arborium/lang-fish"]
lang-jq = ["arborium/lang-jq"]
lang-powershell = ["arborium/lang-powershell"]
lang-zsh = ["arborium/lang-zsh"]
lang-groovy = ["arborium/lang-groovy"]
lang-glsl = ["arborium/lang-glsl"]
lang-hlsl = ["arborium/lang-hlsl"]
lang-commonlisp = ["arborium/lang-commonlisp"]
lang-elisp = ["arborium/lang-elisp"]
lang-gleam = ["arborium/lang-gleam"]
lang-scheme = ["arborium/lang-scheme"]
lang-ini = ["arborium/lang-ini"]
lang-diff = ["arborium/lang-diff"]
lang-dot = ["arborium/lang-dot"]
lang-kdl = ["arborium/lang-kdl"]
lang-ada = ["arborium/lang-ada"]
lang-agda = ["arborium/lang-agda"]
lang-d = ["arborium/lang-d"]
lang-matlab = ["arborium/lang-matlab"]
lang-meson = ["arborium/lang-meson"]
lang-nginx = ["arborium/lang-nginx"]
lang-prolog = ["arborium/lang-prolog"]
lang-batch = ["arborium/lang-batch"]
lang-asm = ["arborium/lang-asm"]
lang-objc = ["arborium/lang-objc"]
lang-typst = ["arborium/lang-typst"]
lang-asciidoc = ["arborium/lang-asciidoc"]
lang-vb = ["arborium/lang-vb"]
lang-idris = ["arborium/lang-idris"]
lang-rescript = ["arborium/lang-rescript"]
lang-lean = ["arborium/lang-lean"]
lang-caddy = ["arborium/lang-caddy"]
lang-capnp = ["arborium/lang-capnp"]
lang-devicetree = ["arborium/lang-devicetree"]
lang-jinja2 = ["arborium/lang-jinja2"]
lang-ninja = ["arborium/lang-ninja"]
lang-postscript = ["arborium/lang-postscript"]
lang-query = ["arborium/lang-query"]
lang-ron = ["arborium/lang-ron"]
lang-sparql = ["arborium/lang-sparql"]
lang-ssh-config = ["arborium/lang-ssh-config"]
lang-starlark = ["arborium/lang-starlark"]
lang-textproto = ["arborium/lang-textproto"]
lang-thrift = ["arborium/lang-thrift"]
lang-tlaplus = ["arborium/lang-tlaplus"]
lang-uiua = ["arborium/lang-uiua"]
lang-verilog = ["arborium/lang-verilog"]
lang-vhdl = ["arborium/lang-vhdl"]
lang-wit = ["arborium/lang-wit"]
lang-x86asm = ["arborium/lang-x86asm"]
lang-yuri = ["arborium/lang-yuri"]
