[package]
name = "moss-languages"
version = "0.1.0"
edition = "2024"
description = "Language support traits and implementations for moss"

[dependencies]
tree-sitter = "0.24"
tree-sitter-language = "0.1"
libloading.workspace = true
dirs = "5"
rusqlite = { workspace = true }
serde_json = { workspace = true }
