[package]
name = "rhizome-moss-packages"
version = "0.1.0"
edition = "2024"
description = "Package registry queries for multiple ecosystems"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_json_lenient = "0.2"
serde_yaml = "0.9"
toml = "0.8"
ureq = "2"

[dev-dependencies]
base64 = "0.22"
