[package]
name = "rhizome-moss-packages"
version = "0.1.0"
edition = "2024"
description = "Package registry queries for multiple ecosystems"

[features]
default = ["ecosystem", "index"]
ecosystem = []  # Project dependency management (Ecosystem trait)
index = ["flate2", "xz2", "quick-xml", "tar"]  # Package index ingestion (PackageIndex trait)
test-network = ["index"]  # Enable tests that hit real APIs (disabled in CI)

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_json_lenient = "0.2"
serde_yaml = "0.9"
toml = "0.8"
ureq = { version = "2", features = ["json", "gzip"] }
urlencoding = "2"
quick-xml = { version = "0.37", features = ["serialize"], optional = true }

# index feature deps
flate2 = { version = "1", optional = true }  # gzip (apt Sources.gz)
xz2 = { version = "0.1", optional = true }   # xz (pacman DBs)
tar = { version = "0.4", optional = true }   # tar archives (apk APKINDEX)

[dev-dependencies]
base64 = "0.22"
