[package]
name = "rhizome-moss-rules"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Syntax-based linting rules with tree-sitter queries"

[dependencies]
# Core
serde.workspace = true
dirs.workspace = true
ignore.workspace = true

# Rule parsing
glob = "0.3"
toml = "0.8"
regex = "1"

# Tree-sitter execution
tree-sitter = "0.25"
streaming-iterator = "0.1"

# Language support
rhizome-moss-languages = { path = "../moss-languages" }

# Core traits
rhizome-moss-core = { path = "../moss-core" }
rhizome-moss-derive = { path = "../moss-derive" }
