[package]
name = "rhizome-moss-tools"
version = "0.1.0"
edition = "2024"
description = "Unified interface for external development tools (linters, formatters, type checkers)"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
which = "7"
rayon.workspace = true
