[package]
name = "rhizome-moss"
version.workspace = true
edition = "2024"
license.workspace = true
description = "Fast code intelligence CLI and library"

[lib]
name = "rhizome_moss"
path = "src/lib.rs"

[[bin]]
name = "moss"
path = "src/main.rs"

[features]
default = []

# Optional MCP server support
mcp = ["rmcp", "schemars"]

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true
ignore.workspace = true
nucleo-matcher.workspace = true
rusqlite.workspace = true
tree-sitter = "0.25"
streaming-iterator = "0.1"
dirs = "5"
rhizome-moss-core = { path = "../moss-core" }
rhizome-moss-derive = { path = "../moss-derive" }
rhizome-moss-languages = { path = "../moss-languages" }
rhizome-moss-jsonschema = { path = "../moss-jsonschema" }
rhizome-moss-rules = { path = "../moss-rules" }
rhizome-moss-openapi = { path = "../moss-openapi" }
rhizome-moss-packages = { path = "../moss-packages" }
rhizome-moss-sessions = { path = "../moss-sessions" }
rhizome-moss-tools = { path = "../moss-tools" }
grep-matcher.workspace = true
grep-regex.workspace = true
grep-searcher.workspace = true
rayon.workspace = true
tokio.workspace = true
axum.workspace = true
utoipa = { version = "5", features = ["axum_extras"] }
notify.workspace = true
ureq = { version = "2", features = ["json"] }
flate2 = "1"
tar = "0.4"
zip = "2"
regex = "1"
jaq-core = "2"
jaq-std = "2"
jaq-json = { version = "1", features = ["serde_json"] }
toml = "0.8"
rmcp = { version = "0.12", features = ["server", "macros", "schemars", "transport-io"], optional = true }
schemars = { version = "1", optional = true }
tower-lsp = "0.20"
git2 = { version = "0.19", default-features = false }
glob = "0.3.3"
nu-ansi-term = "0.50"
dotenvy = "0.15.7"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
flate2 = "1"
